css/main.css
@import url(http://fonts.googleapis.com/css?family=Open+Sans:300,400);

/* Some assumptions */
* {
   margin: 0;
   padding: 0;

   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
}

html, body { height: auto; }
h1, h2, h3, h4, h5, h6 { font-size: 100%; margin-bottom: 0.7em; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; }
h2 { font-size: 125%; margin-bottom: .5em; }
p { margin: 1em 0; }

body {
   background-color: #FDF6E3; /* #ecf0f1; */
   font: 13.34px "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: small;
   -webkit-font-smoothing: antialiased;
   text-align: center;
   color: #002C36;
}

/* Gentle links */
a, a:visited { color: #C54815; text-decoration: none; }
a:hover, a:active { color: #657C83; }

/* The blog posts archive, a long list */
.posts {
   list-style-type: none;
   margin-bottom: 2em;
}

.posts li {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
   line-height: 2em;
}

.posts span {
   color: #93A2A1;
   font-family: Monaco, "Courier New", monospace;
   font-size: 75%;
   margin-right: 1em;
}

/* Don't display date if screen is small */
@media only screen and (max-width: 400px) {
   .posts li span { display: none; }
}

main {
   font-size: 115%;
   text-align: left;
   margin: 2em auto 0.5em;
   line-height: 1.5em;
   max-width: 42em;
   padding-left: 18px;
   padding-right: 18px;
}

header a {
   font-weight: bold;
   text-decoration: none;
}

/* the website's name on the header */
.title {
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   display: inline-block;
   line-height: 0.5em;
   margin-bottom: 2.5em;
}

.title a, .title a:visited {
   color: #073643;
   font-weight: 300;
}

.title a:hover {
   color: #B58916;
}

.title {
   margin-top: .4em;
}

.meta {
   color: #93A2A1;
}

code,
pre {
   font-family: Menlo, Monaco, "Courier New", monospace;
}
code {
   padding: .25em .5em;
   font-size: 75%;
   color: #bf616a;
   background-color: transparent;
   border-radius: 3px;
}
pre {
   display: block;
   margin: 0 0 14px;
   padding: 10px 20px;
   font-size: 15px;
   line-height: 1.4;
   white-space: pre;
   white-space: pre-wrap;
   word-break: break-all;
   word-wrap: break-word;
   background-color: #EFE8D5;
}
pre code {
   padding: 0;
   font-size: 80%;
   color: inherit;
   background-color: transparent;
}
.highlight {
   margin-bottom: 15px;
   border-radius: 4px;
}
.highlight pre {
   margin-bottom: 0;
}

blockquote {
   padding: 0px 18px;
   margin: 15px 0;
   border-left: 3px solid #839596;
}

blockquote p {
   margin-bottom: 0;
   color: #657C83;
}

article {
   overflow: auto;
   word-wrap: break-word;
   margin-bottom: 2em;
}

article h2, article h2 a, article h2 a:visited {
   color: #C54815;
   font-weight: 300;
}

article h2 a:hover {
   color: #B58916;
}

article ul, article ol {
   margin-left: 1.35em;
   margin-bottom: 0.7em;
}

article hr {
   border: 0;
   height: 0;
   border-top: 1px solid rgba(0, 0, 0, 0.1);
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
}

/* Rounded corners, aligned, etc. */
article img {
   border-radius: 4px;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   display: block;
   margin-left: auto;
   margin-right: auto;
   max-width: 100%;
   vertical-align: middle;
   page-break-inside: avoid;
}

footer {
   height: 2.5em;
}

footer #date, footer #date a {
   float: right;
   color: #93A2A1;
}

footer #return,
footer #date {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
}

/* Remove the huge gap at the first paragraph */
#home p.intro {
   margin-top: 0px;
}

